--- a/src/PortfolioContainer/ContactMe/ContactMe.css
+++ b/src/PortfolioContainer/ContactMe/ContactMe.css
@@ -4,7 +4,16 @@
   
     margin: 100px 0 0 0;
   }
-  
+  .footer{
+    margin: 0;
+    background-color: #24263B;
+  }
+  .footer>p{
+    text-align: center;
+    color: #ffffff;
+    padding: 17px 0px;
+    font-size: 18px;
+  }
   .central-form {
     max-width: 1100px;
     padding: 10px;
@@ -144,7 +153,6 @@
       justify-content: space-between;
       margin-top: 30px;
     }
-  
     .img-back {
       flex: 1;
       align-self: center;
